# Code-Generator-Agentic-RAG

./: .env  .gitignore  CLAUDE.md  agent.py  diagnostic_output.txt  postman_context_server.py  pyproject.toml  requirements.txt
outputs/: technical_context_issue_1.md
postman_cache/: collection_37107725-4649bef3-4e7a-4ffb-8d10-7ca4b1914599.json  collections_list.json
src/: agent_context_7.py  agent_context_android_studio.py  agent_gitlab.py  agent_pdf_rag.py  figma_context_server.py  ingest_pdf.py  integration.py  mcp_server_pdf_rag.py  orchestrator.py  postman_context_server.py
